WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278550
Fix std::span lifetime issues after
281966@main
https://bugs.webkit.org/show_bug.cgi?id=278550
Summary
Fix std::span lifetime issues after 281966@main
Alex Christensen
Reported
2024-08-22 17:09:45 PDT
rdar://134358987
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2024-08-22 17:11:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32617
EWS
Comment 2
2024-08-23 06:53:47 PDT
Committed
282655@main
(a3728bae9407): <
https://commits.webkit.org/282655@main
> Reviewed commits have been landed. Closing PR #32617 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug