Cherry-pick 282655@main (a3728bae9407). https://bugs.webkit.org/show_bug.cgi?id=278550

Fix std::span lifetime issues after 281966@main
    https://bugs.webkit.org/show_bug.cgi?id=278550
    rdar://134358987

    Reviewed by Pascoe.

    loadParameters.data is a std::span, so we need to keep the data alive until it is actually sent.
    I use a SharedBuffer as basically a platform-agnostic RetainPtr<NSData> to accomplish this.

    * Source/WebKit/UIProcess/API/C/WKPage.cpp:
    (WKPageLoadData):
    (WKPageLoadDataWithUserData):
    (loadString):
    * Source/WebKit/UIProcess/API/Cocoa/WKBrowsingContextController.mm:
    (-[WKBrowsingContextController loadHTMLString:baseURL:userData:]):
    (-[WKBrowsingContextController loadData:MIMEType:textEncodingName:baseURL:userData:]):
    * Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
    (-[WKWebView loadData:MIMEType:characterEncodingName:baseURL:]):
    (-[WKWebView loadSimulatedRequest:response:responseData:]):
    (-[WKWebView _loadData:MIMEType:characterEncodingName:baseURL:userData:]):
    * Source/WebKit/UIProcess/API/glib/WebKitWebView.cpp:
    (webkit_web_view_load_html):
    (webkit_web_view_load_plain_text):
    (webkit_web_view_load_bytes):
    * Source/WebKit/UIProcess/Cocoa/SOAuthorization/RedirectSOAuthorizationSession.mm:
    (WebKit::RedirectSOAuthorizationSession::completeInternal):
    * Source/WebKit/UIProcess/ProvisionalPageProxy.cpp:
    (WebKit::ProvisionalPageProxy::loadData):
    * Source/WebKit/UIProcess/ProvisionalPageProxy.h:
    * Source/WebKit/UIProcess/WebPageProxy.cpp:
    (WebKit::WebPageProxy::loadData):
    (WebKit::WebPageProxy::loadDataWithNavigationShared):
    (WebKit::WebPageProxy::loadSimulatedRequest):
    (WebKit::WebPageProxy::loadAlternateHTML):
    (WebKit::WebPageProxy::continueNavigationInNewProcess):
    (WebKit::WebPageProxy::loadServiceWorker):
    * Source/WebKit/UIProcess/WebPageProxy.h:

    Canonical link: https://commits.webkit.org/282655@main